OpenJMLTest/test/textBlock4a/expected
test/textBlock4a/Test.java:6: error: a text block is not closed within a JML line comment
//@     abc
           ^
test/textBlock4a/Test.java:5: error: Token @*/ does not introduce an expression
//@     """
        ^
test/textBlock4a/Test.java:4: error: ';' expected
//@     ghost String s = 
                        ^
Operation not performed because of parse or type errors
3 errors
